--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: cpp
-#script: cd b00ga/LL-DLEP/build && cmake -DPACKAGE=on .. && make package
-script: pwd && ls -al
+script: cd build && cmake -DPACKAGE=on .. && make package
+
