--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: cpp
-script: cd build && cmake -DPACKAGE=on .. && make package
+install: libxml2-dev libboost-dev-all libprotobuf-dev protobuf-compiler doxygen graphviz
+script: cd build && cmake -DPACKAGE=on .. && make test && make package
 
