--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ addons:
     - protobuf-compiler
     - doxygen
     - graphviz
-script: cd build && cmake -DPACKAGE=on .. && make && make test && make package
+script:
+  - cd build && cmake -DPACKAGE=on ..
+  - cd build && make
+  - cd build && CTEST_OUTPUT_ON_FAILURE=1 make test
+  - cd build && make package
 
