--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     strategy:
+      max-parallel: 5
       matrix:
         os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
     runs-on: ${{ matrix.os }}
