--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,7 +21,7 @@ jobs:
       run: sudo apt-get install -y libboost-all-dev libxml2-dev libxml2-utils libreadline6-dev libprotobuf-dev protobuf-compiler doxygen graphviz
       if: matrix.os == 'ubuntu-latest'
     - name: Install dependencies (macOS)
-      run: sudo brew install protobuf
+      run: brew install protobuf
       if: matrix.os == 'macos-latest'
     - name: configure
       run: cmake -DPACKAGE=on ..
