--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -49,6 +49,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Debug
+      run: |
+        dir C:\
+        echo %PATH%
+        x86_64-w64-mingw32-gcc --version
     - name: configure
       run: cmake -DPACKAGE=on -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ ..
       working-directory: ./build
