--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -55,7 +55,7 @@ jobs:
         echo %PATH%
         x86_64-w64-mingw32-gcc --version
     - name: configure
-      run: cmake -DPACKAGE=on -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ ..
+      run: cmake -DPACKAGE=on -G "MinGW Makefiles" ..
       working-directory: ./build
       env:
         CC: x86_64-w64-mingw32-gcc
