--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -51,15 +51,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Debug
       run: |
-        dir C:\
+        dir C:\MSYS64
         echo %PATH%
-        x86_64-w64-mingw32-gcc --version
+        x86_64-w64-mingw32-ar --version
     - name: configure
       run: cmake -DPACKAGE=on -G "MinGW Makefiles" ..
       working-directory: ./build
       env:
         CC: x86_64-w64-mingw32-gcc
         CXX: x86_64-w64-mingw32-g++
+        AR: x86_64-w64-mingw32-ar
     - name: make
       run: make
       working-directory: ./build
