--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -51,6 +51,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Debug
       run: |
+        dir C:\MSYS64\
+        dir C:\MSYS64\msys64
         dir C:\MSYS64\usr\bin
 
     - name: configure
