--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
         cmake --version
         dir C:\MSYS64\
-        dir C:\MSYS64\msys64
+        dir C:\MSYS64\mingw64
         dir C:\MSYS64\usr\bin
 
     - name: configure
